--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
   },
   "type": "module",
   "trustedDependencies": [
+    "@fortawesome/fontawesome-free",
     "@sveltejs/kit",
     "esbuild",
     "svelte-preprocess"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "lucide-svelte": "^0.399.0",
